src/app/components/debug/debug.scss
@import '~csshake';
@import '../../styles/colors';

.odDebug {
  height: 100%;

  .pageName {
    margin: 0 8px 12px;
  }
  .debugGuide {
    padding: 0 8px 8px;
  }

  .step {
    background-color: $color-white;
    border: 1px solid $color-grey-med;

    .stepIcon {
      height: 20px;
      width: 20px;
      margin: 8px;
      background-color: $color-primary-light-2;
      border-radius: 50%;
      position: relative;

      .icon {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
      }
    }
    .stepIcon.completed {
      background: none;
      .icon {
        color: $color-green;
      }
    }
    .stepText {
      padding: 4px;
      padding-right: 10px;

      .stepHeading {
        font-weight: bold;
      }
      .stepDesc {
        font-size: 14px;
        color: $color-text-med;
      }
    }
  }
  .step.active {
    background-color: $color-grey-lightest;
  }
  .step.last {
    border-left: none;
    margin-right: 12px;
  }

  .codeBlock {
    overflow: scroll;
    margin: 5px;
    padding: 4px;
    min-height: 105px;
  }

  .debugButton {
    min-width: 0;
    background-color: $color-white;
  }

  .displayCard {
    padding: 12px;
    overflow: hidden;
    
    .cardHeading {
      margin-bottom: 12px;
    }
    .outHeading {
      color: $color-text-med;
    }

    .code-block pre code {
      padding: 0;
    }

    .cardInput {
      margin: 0
    }
  }

  .frameHeading {
    padding: 4px 8px;
    background: $color-primary-light-4;
    border: 1px solid $color-primary;
    outline: none;

    .frameIcon {
      color: $color-text;
    }
  }
  .frameHeading.no-border-bottom {
    border-bottom: none;
  }

  .exceptions {
    .cardHeading {
      color: $color-red;
    }
    .code-block {
      color: $color-red-error;
    }
  }
}

// .debugapp.shakePage {

// }

